--- a/compose.yaml
+++ b/compose.yaml
@@ -17,6 +17,10 @@ services:
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
             IGNITION_LOCAL_SITES_PATH: '${PWD}'
+            AUTHORIZE_URL: '${AUTHORIZE_URL}'
+            NOTIFY_URL: '${NOTIFY_URL}'
+            L5_SWAGGER_GENERATE_ALWAYS: '${L5_SWAGGER_GENERATE_ALWAYS:-false}'
+            L5_SWAGGER_BASE_PATH: '${L5_SWAGGER_BASE_PATH:-http://localhost}'
         volumes:
             - '.:/var/www/html'
         networks:
