--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,8 +52,6 @@ jobs:
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress --no-interaction
 
-      - name: Setup project
-        run: composer setup
 
       - name: Setup database
         env:
@@ -65,6 +63,16 @@ jobs:
           DB_PASSWORD: password
         run: |
           php artisan migrate --force
+
+      - name: Setup project
+        run: composer setup
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_DATABASE: testing
+          DB_USERNAME: root
+          DB_PASSWORD: password
 
       - name: Run Laravel Pint (Code Formatting)
         run: ./vendor/bin/pint --test
